--- a/emails/confirm-email.html
+++ b/emails/confirm-email.html
@@ -347,7 +347,7 @@
             <tr>
               <td class="email-masthead">
                 <a href="{{base_url}}" class="f-fallback email-masthead_name">
-                  ✨ SupaVacation
+                  ✨ Crypto-Notebook
                 </a>
               </td>
             </tr>
