--- a/emails/welcome.html
+++ b/emails/welcome.html
@@ -350,7 +350,7 @@
             <tr>
               <td class="email-masthead">
                 <a href="{{base_url}}" class="f-fallback email-masthead_name">
-                  ✨ SupaVacation
+                  ✨ Crypto-Notebook
                 </a>
               </td>
             </tr>
